--- a/protocoin-faucet/package.json
+++ b/protocoin-faucet/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gibacoin",
+  "name": "protocoin-faucet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.68",
-    "@types/react": "^18.2.42",
+    "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
